--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    // Lam viec voi mo hinh restful (huong dich vu)
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+//    Chuyen doi json <-> object
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 }
