--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "findingroom.cuonglm.poly.vn.findingroom"
         minSdkVersion 17
         targetSdkVersion 27
         versionCode 1
+        multiDexEnabled true
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -19,16 +20,17 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.android.support:support-v4:27.1.1'
+    //noinspection GradleCompatible
     implementation 'com.android.support:design:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     // Lam viec voi mo hinh restful (huong dich vu)
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-//    Chuyen doi json <-> object
+    //    Chuyen doi json <-> object
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 }
