--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".uis.SignupActivity"></activity>
+        <activity android:name=".uis.DeitalActivity"></activity>
     </application>
 
 </manifest>
