--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,9 @@
         <activity
             android:name=".uis.SignupActivity"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".uis.CacPhongDaDangActivity"></activity>
+        <activity android:name=".uis.DeitalActivity"
+            android:windowSoftInputMode="adjustPan"
+            android:parentActivityName=".uis.MainActivity"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
