--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,17 +19,20 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".uis.ACLogin"
-            android:windowSoftInputMode="adjustPan"></activity>
-        <activity
-            android:name=".uis.MainActivity"
-            android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustPan">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".uis.MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustPan">
+
         </activity>
         <activity
             android:name=".uis.SignupActivity"
@@ -49,9 +52,6 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity
-            android:name=".fragment.MapsFragment"
-            android:label="@string/title_activity_maps_fragment"></activity>
         <activity android:name=".uis.TimPhongTroActivity"
             android:parentActivityName=".uis.MainActivity"></activity>
     </application>
