--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,8 @@
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".uis.DeitalActivity"
             android:windowSoftInputMode="adjustPan"
-            android:parentActivityName=".uis.MainActivity"></activity>
+            android:parentActivityName=".uis.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
