--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,8 +53,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".uis.TimPhongTroActivity"
-            android:parentActivityName=".uis.MainActivity"></activity>
+        <activity android:name=".uis.TimPhongTroActivity"></activity>
     </application>
 
 </manifest>
